[package]
name = "lightsock-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
tokio = { version = "1.15.0", features = ["full"] }
bytes = "1"
async-channel = "1.6.1"
tracing = "0.1.32"
tracing-subscriber = "0.2.25"



[[bin]]
name = "lightsock-local"
path = "src/bin/lightsock_local.rs"

[[bin]]
name = "lightsock-remote"
path = "src/bin/lightsock_remote.rs"
